# structlog-sentry

./: .coafile  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  push.yml  release.yml  test.yml
structlog_sentry/: __init__.py
test/: test_sentry_processor.py
