[tool.poetry]
name = "structlog-sentry"
version = "1.2.2"
description = "Sentry integration for structlog"
authors = ["Kiwi.com platform <platform@kiwi.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kiwicom/structlog-sentry"
homepage = "https://github.com/kiwicom/structlog-sentry"

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["*.md", "*.toml", "*.txt", "*.yml", "*.yaml", ".coveragerc", "tox.ini"]

[tool.poetry.dependencies]
python = "^3.6"
sentry-sdk = "^0.19.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
