[tool.poetry]
name = "structlog-sentry"
version = "2.2.1"
description = "Sentry integration for structlog"
authors = ["Kiwi.com platform <platform@kiwi.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kiwicom/structlog-sentry"
homepage = "https://github.com/kiwicom/structlog-sentry"

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["*.md", "*.toml", "*.txt", "*.yml", "*.yaml", ".coveragerc", "tox.ini", "structlog_sentry/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
sentry-sdk = "^2.15.0"
structlog = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
